# pets

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: adopt_pet.rs  adoptable_pets.rs  auth.rs  authorize_trainer.rs  create_trainer.rs  error.rs  feed_pet.rs  main.rs  mutation.rs  pet_to_trainer.rs  query.rs  trainer.rs  trainer_to_pets.rs  types.rs  update.rs
